@@ -14,7 +14,7 @@ PSMark                   25     Glasses/PSMark                  .
 
 Tringula                 40     Glasses/Tringula                .
 
-TringuCam                50     Glasses/TringuCam               .
+TringuCam                50     Glasses/TringuCam
 
 TSPupilInfo              60     Glasses/TSPupilInfo             .
 
